tests/baselines/reference/cloduleWithPriorUninstantiatedModule.errors.txt
cloduleWithPriorUninstantiatedModule.ts(2,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
cloduleWithPriorUninstantiatedModule.ts(12,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== cloduleWithPriorUninstantiatedModule.ts (2 errors) ====
    // Non-ambient & uninstantiated module.
    module Moclodule {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface Someinterface {
            foo(): void;
        }
    }
    
    class Moclodule {
    }
    
    // Instantiated module.
    module Moclodule {
           ~~~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export class Manager {
        }
    }